--- a/tekst/filtry_cząsteczkowe.tex
+++ b/tekst/filtry_cząsteczkowe.tex
@@ -142,7 +142,7 @@ i wyznacza się się je za każdym razem gdy usunie się cząstkę.
 W algorytmie \ref{adaptive_N} wydzielono dwie sekcje, testowe usuwanie cząstek oraz wyznaczanie nowego $N_k$. W pierwszym etapie wyznacza się wartości $\xi(n_s)$ dal różnych rozmiarów populacji, kolejno ujmując cząstki które leżą zbyt blisko siebie. Minimalna odległość na danym wymiarze $d$, po przekroczeniu której usuwa się jedną z cząstek, jest określana przez parametr $\gamma_d$. W drugim etapie wyznacza się nowy rozmiar populacji $N_{k+1}$ w zależności od $\xi_k$. Dopuszczalny błąd wprowadzany przez zmniejszenie populacji jest określany przez $\alpha$.
 
 % Może się wydawać, iż zwiększy to złożoność obliczeniową, ponieważ trzeba o wiele więcej czasu poświęcić na analizę poszczególnych cząstek, jednak dzięki temu możemy zredukować samą ich liczbę, co sprawia, że koniec końców złożoność obliczeniowa nie zmienia się znacząco, a jakość wyników się poprawia
-\section{Box Particle Filter} \label{bpf_chapter}
+\section{Box Particle Filter (BPF)} \label{bpf_chapter}
 W tym podejściu zaproponowanym w \cite{bpf_base} i udoskonalonym w \cite{brbpf} zmieniono sposób reprezentacji cząstek. Zamiast punktów w przestrzeni stanów zastosowano interwały, w celu poprawy jakości estymacji w sytuacjach, gdy pomiary są zbyt szybkozmienne. Na przykład, dla problemu opisanego w podrozdziale \ref{simple_example_chap}, zamiast liczby rzeczywistej opisującej położenie robota, mielibyśmy odcinek na którym może się znajdować. Ponieważ zmianie ulega reprezentacja cząstek, wszystkie kroki algorytmu opisanego w rozdziale \ref{basic_algorithm} muszą zostać odpowiednio dostosowane.
 \begin{itemize}
 	\item W kroku \ref{pf_init_step}, cząsteczki interwałowe są inicjalizowane w taki sposób, aby pokrywać całą dopuszczalną przestrzeń stanów i nie nachodzić na siebie nawzajem.
