--- a/tekst/wprowadzenie.tex
+++ b/tekst/wprowadzenie.tex
@@ -25,6 +25,6 @@ Na rysunku \ref{filtr_hier} przedstawiono hierarchię rozwiązać opartych o to 
 \begin{figure}[H]
 	\begin{center}
 		\includegraphics[width=10cm]{./nfg001.jpg}
-		\caption{Hierarchia filtrów opartych o filtrację Bayesowską. Obrazek zaczerpnięto z \cite{prac_gui}} \label{filtr_hier}
+		\caption{Hierarchia filtrów opartych o filtrację Bayesowską. Obrazek zaczerpnięto z \cite{prac_gui}.} \label{filtr_hier}
 	\end{center}
 \end{figure}
