--- a/tekst/Praca_magisterska.tex
+++ b/tekst/Praca_magisterska.tex
@@ -176,7 +176,7 @@
 \wydzial{WYDZIAŁ ELEKTRONIKI}
 \kierunek{AUTOMATYKA I ROBOTYKA}
 \specjalnosc{SYSTEMY INFORMATYCZNE W AUTOMATYCE}
-\promotor{dr hab. inż. Paweł Wachel, K$28$W$04$D$02$}
+\promotor{dr hab. inż. Paweł Wachel, K$28$W$04$}
 \date{WROCŁAW, 2021}
 
 
