--- a/tekst/wnioski.tex
+++ b/tekst/wnioski.tex
@@ -1,13 +1,13 @@
 \chapter{Podsumowanie}
-W tym rozdziale przedstawiono wnioski oraz wskazano kierunki przyszłych badań.
+W tym rozdziale przedstawiono wnioski oraz wskazano możliwe kierunki przyszłych badań.
 \section{Wnioski}
 W ramach pracy udało się zrealizować postawiony we wstępie cel. Poniżej zestawiono wnioski, które wysnuto po ukończeniu pracy.
 \begin{itemize}
-	\item Filtry cząsteczkowe są szeroko wykorzystywanym i wciąż badanym narzędziem. Pozwalają one na radzenie sobie z problemami, gdy zarówno sam system jak i jego zależność od szumów jest wysoce nieliniowa. Ponadto, ponieważ są one w stanie, do pewnego stopnia, radzić sobie z systematycznymi błędami(rozdział \ref{noise_chapter}), to są w stanie korygować błędy popełnione przy projektowaniu modelu.
-	\item Filtry cząsteczkowe doskonale nadają się do rozwiązywania problemów lokalizacji, przy znajomości mapy. Zawdzięczają to głównie swojej prostocie, ponieważ mając model systemu, w zasadzie jedynym parametrem jakim można manipulować jest liczba cząstek, którą można łatwo ustalić w oparciu o wydajność urządzenia, na którym uruchamia się algorytm, albo stosując podejście opisane w rozdziale \ref{adaptive_chapter}.
-	\item Dużym problemem są sytuacje, gdy lokalizacja z początki się nie powiedzie. O ile podstawowy algorytm nie jest w stanie szybko korygować takich błędów, to usprawnienia, takie jak to opisane w rozdziale \ref{evol_chap}, są w stanie wyeliminować ten błąd. Innym rozwiązaniem może być ponowna inicjalizacja algorytmu, jak to ma miejsce w algorytmie BPF opisanym w rozdziale \ref{bpf_chapter}.
+	\item Filtry cząsteczkowe są szeroko wykorzystywanym i wciąż badanym narzędziem. Pozwalają one na radzenie sobie z problemami, gdy zarówno sam system jak i jego zależność od szumów jest wysoce nieliniowa. Ponadto, ponieważ są one w stanie, do pewnego stopnia, radzić sobie z systematycznymi błędami(rozdział \ref{noise_chapter}), to mogą korygować błędy popełnione przy projektowaniu modelu.
+	\item Filtry cząsteczkowe doskonale nadają się do rozwiązywania problemów lokalizacji, przy znajomości mapy. Zawdzięczają to głównie swojej prostocie, ponieważ mając model systemu, w zasadzie jedynym parametrem jaki trzeba ustalić jest liczba cząstek, którą można łatwo wyznaczyć w oparciu o wydajność urządzenia, na którym uruchamia się algorytm, albo stosując podejście opisane w rozdziale \ref{adaptive_chapter}.
+	\item Dużym problemem są sytuacje, gdy lokalizacja z początku się nie powiedzie. O ile podstawowy algorytm nie jest w stanie szybko korygować takich błędów, to usprawnienia, takie jak to opisane w rozdziale \ref{evol_chap}, są w stanie wyeliminować ten błąd. Innym rozwiązaniem może być ponowna inicjalizacja algorytmu, jak to ma miejsce w algorytmie BPF opisanym w rozdziale \ref{bpf_chapter}.
 	\item Całkowita zmiana podejścia do tego, jak się modeluje się cząstki, okazała się bardzo dobrym pomysłem, gdy otrzymujemy szybkozmienne pomiary, jak to ma miejsce w problemie samolotu opisanego w rozdziale \ref{samolot_w_locie_chap}, i zbadanego w rozdziale \ref{zmienna_mapa_chap}.
-	\item Przygotowane, na potrzeby pracy, oprogramowanie doskonale spełniło swoje zadanie. Dzięki połączeniu C++ i Pythona udało się w pełni skorzystać z zalet obu języków, to jest wydajności C++ i prostocie w manipulacji danymi Pythona. Jednym problemem był czas, który należało poświęcić aby zintegrować oba te języki, który był zbyt długi, ze względu na problematyczne debuggowanie.
+	\item Przygotowane, na potrzeby pracy, oprogramowanie doskonale spełniło swoje zadanie. Dzięki połączeniu C++ i Pythona udało się w pełni skorzystać z zalet obu języków, to jest wydajności C++ i prostocie w manipulacji danymi Pythona. Jednym problemem był czas, który należało poświęcić na integrację obu języków, a który był zbyt długi, ze względu na problematyczne debuggowanie. TODO usuwaniem błędów implementacyjnych
 \end{itemize}
 
 \section{Kierunki przyszłych badań}
