--- a/tekst/badania.tex
+++ b/tekst/badania.tex
@@ -1,5 +1,5 @@
 \chapter{Badania} \label{przeg}
-W tym rozdziale opisano przeprowadzone na kodzie badania. Zaczęto od opisania konkretnych problemów którymi się zajmowano, a następnie przeprowadzono badania mające potwierdzić czy algorytmy działają poprawnie. Na koniec przebadano zachowanie zaimplementowane filtry pod różnymi kątami.
+W tym rozdziale opisano przeprowadzone na kodzie badania. Zaczęto od opisania konkretnych problemów którymi się zajmowano, a następnie przeprowadzono badania mające potwierdzić czy algorytmy działają poprawnie. Na koniec przebadano zachowanie zaimplementowanych filtrów pod różnymi kątami.
 \section{Opis poszczególnych problemów}
 W badaniach zajęto się dwoma problemami wyznaczania lokalizacji. Pierwszy polega na ustalenie pozycji robota na podstawie pomiaru odległości od ściany, drugi na ustalenie pozycji samolotu na podstawie pomiaru wysokości. W oby przypadkach znano mapę środowiska w którym się znajdowały.
 \subsection{Robot w pomieszczeniu} \label{robot_w_pomieszczeniu_desc}
@@ -7,7 +7,7 @@ Stan robota w pomieszczeniu opisano czterema liczbami:
 \begin{equation*}
 	x = \{p_x,p_y,\theta,v\}
 \end{equation*}
-gdzie $p_x$ i $p_y$ to pozycja robota, $\theta$ jest jego orientacją, natomiast $v$ prędkością. Pomiar odległości od ściany był zawsze wykonywany w kierunku $\theta$, i był miał Gaussowski rozkład. Mapa jest kwadratowym pokojem o wymiarach $1000$ na $1000$ jednostek, wypełnionym kołami o różnych średnicach, oraz ograniczany prostymi. Na rysunku \ref{przykladowa_mapa_pokoju} przedstawiono przykładową mapę.\\
+gdzie $p_x$ i $p_y$ to pozycja robota, $\theta$ jest jego orientacją, natomiast $v$ prędkością. Pomiar odległości od ściany był zawsze wykonywany w kierunku $\theta$, i miał Gaussowski rozkład. Mapa jest kwadratowym pokojem o wymiarach $1000$ na $1000$ jednostek, wypełnionym kołami o różnych średnicach, oraz ograniczany prostymi. Na rysunku \ref{przykladowa_mapa_pokoju} przedstawiono przykładową mapę.\\
 O ile nie będzie napisane inaczej, robot zaczynał na środku mapy, miał prędkość 10 jednostek na iterację, i skręcał w lewo o $0.1rad$ na krok. Faktyczna pozycja robota była oznaczana przez czerwoną kropkę, estymowana pozycja przez żółtą, natomiast cząstki oznaczano na niebiesko.
 \begin{figure}[H]
 	\begin{center}
@@ -89,7 +89,7 @@ W tym przypadku zbadano jak zachowa się filtr przy braku punktów odniesienia. 
 \end{figure}
 
 \subsection{Brak ewolucji systemu}
-Tutaj Zbadano, co się dzieje, gdy system nie ewoluuje. Spodziewano się, pojawią się izohipsy, przynajmniej na początku, nim populacja nie stanie się zbyt zdegenerowana. Badania przeprowadzono dla populacji o rozmiarze $N=100000$. Jak widać na rysunkach \ref{stationary} i \ref{stationary_plane} przewidywania się spełniły, dodatkowo dla rysunku \ref{stationary_plane} dobrze widać problem się degeneracji. Problem ten można rozwiązać dzięki podejściu z rozdziału \ref{evol_chap}, które zademonstrowano na rysunku \ref{stationary_evol}, na którym widać jakwychwycone zostały obszary na tej samej wysokości.
+Tutaj Zbadano, co się dzieje, gdy system nie ewoluuje. Spodziewano się, pojawią się izohipsy, przynajmniej na początku, nim populacja nie stanie się zbyt zdegenerowana. Badania przeprowadzono dla populacji o rozmiarze $N=100000$. Jak widać na rysunkach \ref{stationary} i \ref{stationary_plane} przewidywania się spełniły, dodatkowo dla rysunku \ref{stationary_plane} dobrze widać problem się degeneracji. Problem ten można rozwiązać dzięki podejściu z rozdziału \ref{evol_chap}, które zademonstrowano na rysunku \ref{stationary_evol}, na którym widać jak wychwycone zostały obszary na tej samej wysokości.
 
 \begin{figure}[H]
 	\begin{center}
@@ -120,7 +120,7 @@ Tutaj Zbadano, co się dzieje, gdy system nie ewoluuje. Spodziewano się, pojawi
 %powinien pozostać jednostajny szum
 
 \section{Wpływ sposobu estymowania położenia}
-Przebadano trzy metody estymowania położenia: średnią ważoną cząstek, średnią ważoną 10\% najlepszych cząstek, najlepszą cząstkę. Badania przeprowadzono na populacji 300 cząstek. Na wykresie \ref{wplyw_est} przedstawiono wyniki, z których wynika, że między średnią ważoną z najlepszych 10\% i i najlepszym osobnikiem.
+Przebadano trzy metody estymowania położenia: średnią ważoną cząstek, średnią ważoną 10\% najlepszych cząstek, najlepszą cząstkę. Badania przeprowadzono na populacji 300 cząstek. Na wykresie \ref{wplyw_est} przedstawiono wyniki, z których wynika, że między średnią ważoną z najlepszych 10\% i najlepszym osobnikiem nie ma większej różnicy, natomiast średnia ważona populacji jest troszkę lepsza niż pozostałe dwa rozwiązania.
 
 \begin{figure}[H]
 	\begin{center}
@@ -133,7 +133,7 @@ Przebadano trzy metody estymowania położenia: średnią ważoną cząstek, śr
 %\section{Wpływ funkcji określającej błąd pomiaru}
 
 \section{Wpływ liczby cząstek}
-Zbadano wpływ liczby cząstek na jakość estymacji. Badania przeprowadzono dla  robota w pokoju, dla czterech różnych $N$, 100, 300, 1000 i 10000, wyniki uśredniając po 100 razy. Wyniki zestawiono na rysunku \ref{wplyw_N}. Jako błąd przyjęto pierwiastek sumy kwadratów błędów w kierunkach $x$ i $y$, podzielony przez prędkość rzeczywistego robota. Jak widać, wraz ze wzrostem cząstek poprawia się jakość estymacji, jednak dzieje się tak do pewnego momentu, po którym zwiększenie liczb cząstek nie poprawia jakości estymacji (tutaj wyniosła ona około 1000 cząstek). Na wykresie \ref{dynamic_N} widać jak zmieniała się liczba cząstek, gdy zastosowano podejście opisane w rozdziale \ref{adaptive_chapter}. Wartości parametrów ustalono następująco: $N_{min}=100, N_{max}=1000, \alpha = 50, \gamma = 1$.  Jak widać nie tracąc za bardzo na jakości estymacji można znacząco zredukować liczbę cząstek.
+Zbadano wpływ liczby cząstek na jakość estymacji. Badania przeprowadzono dla  robota w pokoju, dla czterech różnych $N$: 100, 300, 1000 i 10000, wyniki uśredniając po 100 razy. Rezultaty zestawiono na rysunku \ref{wplyw_N}. Jako błąd przyjęto pierwiastek sumy kwadratów błędów w kierunkach $x$ i $y$, podzielony przez prędkość rzeczywistego robota. Jak widać, wraz ze wzrostem cząstek poprawia się jakość estymacji, jednak dzieje się tak do pewnego momentu, po którym zwiększenie liczb cząstek nie poprawia jakości estymacji (tutaj wyniosła ona około 1000 cząstek). Na wykresie \ref{dynamic_N} widać jak zmieniała się liczba cząstek, gdy zastosowano podejście opisane w rozdziale \ref{adaptive_chapter}. Wartości parametrów ustalono następująco: $N_{min}=100, N_{max}=1000, \alpha = 50, \gamma = 1$.  Jak widać nie tracąc za bardzo na jakości estymacji można znacząco zredukować liczbę cząstek.
 
 \begin{figure}[H]
 	\begin{center}
@@ -206,7 +206,7 @@ Sprawdzono zachowanie filtra w sytuacji, gdy w jakiś sposób nie poradzi sobie 
 	\end{center}
 \end{figure}
 \section{Wpływ zmienności mapy} \label{zmienna_mapa_chap}
-W problemie robota w pokoju pomiary które może zbierać robot zazwyczaj nie zmieniają się znacząco, przy niewielkich zmianach stanu. Zupełnie inaczej jest w problemie samolotu w locie, gdzie przesunięcie o 10 jednostek daje w zasadzie losowe pomiary. Na rysunku \ref{pf_plane} widać przykładową realizację podstawowego algorytmu dla tego problemu. Mimo iż liczba cząstek wyniosła $N=10000$ algorytm nie jest w stanie poprawnie określić położenia. Na rysunku \ref{bpf_plane_wro} zaprezentowano jak BPF opisany w rozdziale \ref{bpf_chapter} radzi sobie z tym problemem, liczba cząstek wyniosła $N=961$. Jak widać, wyniki są nieporównywalnie lepsze niż w przypadku podstawowego algorytmu.
+W problemie robota w pokoju pomiary które może zbierać robot zazwyczaj nie zmieniają się znacząco, przy niewielkich zmianach stanu. Zupełnie inaczej jest w problemie samolotu w locie, gdzie przesunięcie o 10 jednostek daje w zasadzie losowe pomiary. Na rysunku \ref{pf_plane} widać przykładową realizację podstawowego algorytmu dla tego problemu. Mimo iż liczba cząstek wyniosła $N=10000$ algorytm nie jest w stanie dokładnie określić położenia. Na rysunku \ref{bpf_plane_wro} zaprezentowano jak BPF opisany w rozdziale \ref{bpf_chapter} radzi sobie z tym problemem, liczba cząstek wyniosła $N=961$. Jak widać, wyniki są nieporównywalnie lepsze niż w przypadku podstawowego algorytmu.
 \begin{figure}[H]
 	\begin{center}
 		\includegraphics[width=11cm]{./pf_plane.png}
@@ -224,7 +224,7 @@ W problemie robota w pokoju pomiary które może zbierać robot zazwyczaj nie zm
 
 
 \section{Zastosowanie BPF do problemu robota w pokoju}
-Na koniec podjęto próbę zastosowania BPF do problemu robota w pokoju. Przykład realizacji jest widoczny na rysunku \ref{bpf_robot_2d}. Jak widać, wyniki są bardzo obiecujące, zwłaszcza, gdy się spojrzy na rysunek \ref{bpf_robot_2d_err}, gdzie porównano oba BPF z podstawowym algorytmem (na pojedynczym uruchomieniu), a na którym widać iż BPF daje o wiele lepsze wyniki. Należy zauważyć iż podczas uruchamiania BPF dawał zazwyczaj zawsze takie same wyniki, natomiast podstawowy algorytm znacząco zmieniał się za każdym razem.
+Na koniec podjęto próbę zastosowania BPF do problemu robota w pokoju. Przykład realizacji jest widoczny na rysunku \ref{bpf_robot_2d}. Jak widać, wyniki są bardzo obiecujące, zwłaszcza, gdy się spojrzy na rysunek \ref{bpf_robot_2d_err}, gdzie porównano oba BPF z podstawowym algorytmem (na pojedynczym uruchomieniu), a na którym widać iż BPF daje o wiele lepsze wyniki. Należy zauważyć iż podczas uruchamiania BPF dawał zazwyczaj takie same wyniki dla wszystkich uruchomień, natomiast podstawowy algorytm znacząco zmieniał się za każdym razem.
 \begin{figure}[H]
 	\begin{center}
 		\includegraphics[width=12cm]{./bpf_robot_2d.png}
